학생 저장시 연번 넣음